Fix scroll on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -24,7 +24,6 @@ body {
     width: 100vw;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 body {
