--- a/style/page.css
+++ b/style/page.css
@@ -2,6 +2,9 @@
     display: flex;
     flex: 1;
     position: relative;
+    -webkit-overflow-scrolling: touch;
+  	overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .page:before,
